--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Final Project for Quality Work Test Automation Bootcamp",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -R -f cypress/reports; mkdir cypress/reports; rm -f mochawesome.json",
+    "run": "npx cypress run",
+    "test": "npm-run-all clean run report -c",
+    "test:spec": "npm-run-all clean \"run -- --spec {1}\" report -c --",
+    "report": "npx mochawesome-merge cypress/reports/*.json > mochawesome.json && npx marge mochawesome.json && open mochawesome-report/mochawesome.html && rm -f mochawesome.json"
   },
   "repository": {
     "type": "git",
