--- a/package.json
+++ b/package.json
@@ -8,7 +8,20 @@
     "run": "npx cypress run",
     "test": "npm-run-all clean run report -c",
     "test:spec": "npm-run-all clean \"run -- --spec {1}\" report -c --",
-    "report": "npx mochawesome-merge cypress/reports/*.json > mochawesome.json && npx marge mochawesome.json && start mochawesome-report/mochawesome.html && rm -f mochawesome.json"
+    "report": "npx mochawesome-merge cypress/reports/*.json > mochawesome.json && npx marge mochawesome.json && start mochawesome-report/mochawesome.html && rm -f mochawesome.json",
+    "add to cart":"npx cypress run --spec cypress/e2e/tests/datadriven.cy.js",
+    "login":"npx cypress run --spec cypress/e2e/tests/login.cy.js",
+    "registration":"npx cypress run --spec cypress/e2e/tests/registration.cy.js",
+    "cart":"npx cypress run --spec cypress/e2e/tests/cart.cy.js",
+    "checkout":"npx cypress run --spec cypress/e2e/tests/checkout.cy.js",
+    "product gallery":"npx cypress run --spec cypress/e2e/tests/productgallery.cy.js",
+    "product details":"npx cypress run --spec cypress/e2e/tests/productdetails.cy.js",
+    "filter and sort":"npx cypress run --spec cypress/e2e/tests/filterandsort.cy.js",
+    "contact":"npx cypress run --spec cypress/e2e/tests/contact.cy.js",
+    "search":"npx cypress run --spec cypress/e2e/tests/search.cy.js",
+    "data driven":"npx cypress run --spec cypress/e2e/tests/datadriven.cy.js"
+
+
   },
   "repository": {
     "type": "git",
